# agentic_ai_projects

./: .do-app.yaml  .gitignore  .mcp.json  DEPLOYMENT_GUIDE.md  DEPLOY_VIA_WEB_UI.md  NEON_BETTER_AUTH_VERIFICATION.md  PHASE_II_TESTING_SUMMARY.md  PRODUCTION_READY.md  RAILWAY_DEPLOYMENT.md  README.md  api.txt  comprehensive_test_suite.py  database.txt  deploy-railway-simple.ps1  deploy-to-digitalocean.ps1  deploy-to-railway.ps1  docker-compose.yml  e2e_comprehensive_test.py
.claude/: settings.local.json
backend/: .coveragerc  .dockerignore  Dockerfile  IMPLEMENTATION_COMPLETE.md  README.md  RECONSTRUCTION_SUMMARY.md  TESTING.md  add_avatar_column.py  add_password_reset_columns.py  fix_table_schema.py  migrate_db.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  run_tests.py  test_password_reset.py  validate_imports.py
backend/alembic/: env.py
backend/alembic/versions/: 001_create_task_table.py  001_create_tasks_table.py  002_create_task_tags_junction.py  003_add_password_reset_to_users.py
backend/src/: main.py
backend/src/agents/: geminiconfig.py  session_manager.py  task_management_agent.py  task_operations.py
backend/src/api/routers/: auth.py  chatbot.py  tasks.py
backend/src/api/schemas/: auth.py  task.py
backend/src/auth/: better_auth_config.py  dependencies.py
backend/src/db/: database.py
backend/src/mcp_server/: server.py
backend/src/mcp_server/tools/: create_task.py  delete_task.py
backend/src/models/: chat_message.py  task.py  user.py  user_data.py
backend/src/repositories/: chat_repository.py  task_repository.py  user_data_repository.py
backend/src/services/: chat_service.py  email_service.py  event_service.py  task_service.py  user_service.py
backend/src/utils/: __init__.py  encryption.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/mcp/: test_conversational_flows.py  test_server.py  test_tools.py
backend/tests/unit/: test_auth_module.py  test_database.py  test_password_service.py  test_repository.py  test_service.py
evolution-of-todo/backend/: .env.example  init_db.py  migrate_add_user_id.py  pyproject.toml  test_db.py  todo_app.db
evolution-of-todo/backend/src/: main.py
evolution-of-todo/backend/src/agents/: geminiconfig.py  todo_agent.py
evolution-of-todo/backend/src/auth/: auth.py  better_auth_service.py  dependencies.py
evolution-of-todo/backend/src/db/: database.py
evolution-of-todo/backend/src/mcp_server/: README.md  __init__.py  server.py
evolution-of-todo/backend/src/models/: better_auth.py  task.py  user.py
evolution-of-todo/backend/src/repositories/: task_repository.py  user_repository.py
evolution-of-todo/backend/src/services/: password_service.py  task_service.py  user_service.py
evolution-of-todo/phase-i-console/: README.md  pyproject.toml
evolution-of-todo/phase-i-console/src/: __init__.py
evolution-of-todo/phase-i-console/src/cli/: __init__.py  main.py
evolution-of-todo/phase-i-console/src/models/: task.py
evolution-of-todo/phase-i-console/tests/: __init__.py
(+238 files in other folders)
